--- a/index.html
+++ b/index.html
@@ -2,156 +2,190 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LCOE Calculator</title>
-  <link rel="stylesheet" href="style.css"/>
+
+  <!-- Link to external CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Chart.js, PapaParse, Tippy.js (for tooltips if needed) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css"/>
+
   <script>
+    // Chart.js defaults
     Chart.defaults.font.family = 'Poppins, sans-serif';
     Chart.defaults.font.size = 15;
+
+    // Toggle group content display on click
+    function toggleGroup(el) {
+      const content = el.nextElementSibling;
+      if (content.style.display === "none" || content.style.display === "") {
+        content.style.display = "block";
+        el.classList.remove("collapsed");
+        el.classList.add("expanded");
+      } else {
+        content.style.display = "none";
+        el.classList.remove("expanded");
+        el.classList.add("collapsed");
+      }
+    }
+
+    // Collapse groups on load, init tooltips
+    document.addEventListener("DOMContentLoaded", function() {
+      document.querySelectorAll('.group-title').forEach(el => {
+        el.classList.add("collapsed");
+        const content = el.nextElementSibling;
+        content.style.display = "none";
+      });
+      tippy('[data-tippy-content]', {
+        animation: 'scale',
+        theme: 'light-border'
+      });
+    });
   </script>
 </head>
 <body>
+  <!-- HEADER -->
   <header class="container">
     <h1>LCOE Calculator</h1>
     <p class="disclaimer">
-      Model that does not double-count solar going into battery, plus gas efficiency. 
-      Simple placeholder solar logic (hours 7..19).
+      This is a high-level LCOE model for demonstration only. Numbers are approximate.
     </p>
   </header>
 
+  <!-- MAIN LAYOUT WRAPPER -->
   <div class="container sim-container">
+    <!-- SIDEBAR with input parameters -->
     <div id="sidebar">
-      <h2>Model parameters</h2>
+      <h2>Model Parameters</h2>
 
+      <!-- Group: System Configuration -->
       <div class="group">
-        <h3 class="group-title collapsed" onclick="toggleGroup(this)">System Configuration</h3>
+        <h3 class="group-title" onclick="toggleGroup(this)">System Configuration</h3>
         <div class="group-content">
           <fieldset>
-            <legend>Capacities</legend>
-            <label for="solarCap">Solar Capacity (GW):</label>
-            <input type="number" id="solarCap" value="6" step="0.1"/>
-            <label for="batteryCap">Battery Capacity (GWh):</label>
-            <input type="number" id="batteryCap" value="10" step="1"/>
+            <legend>Capacity</legend>
+            <label for="solarCap" data-tippy-content="Solar capacity in GW">Solar Capacity (GW):</label>
+            <input type="number" id="solarCap" value="6" step="0.1" />
+
+            <label for="batteryCap" data-tippy-content="Battery capacity in GWh">Battery Capacity (GWh):</label>
+            <input type="number" id="batteryCap" value="10" step="1" />
           </fieldset>
         </div>
       </div>
 
+      <!-- Group: Assumptions -->
       <div class="group">
-        <h3 class="group-title collapsed" onclick="toggleGroup(this)">Assumptions</h3>
+        <h3 class="group-title" onclick="toggleGroup(this)">Assumptions</h3>
         <div class="group-content">
           <fieldset>
             <legend>Costs</legend>
             <label for="gasCapex">Gas Capex (GBP/kW):</label>
-            <input type="number" id="gasCapex" value="800" step="1"/>
+            <input type="number" id="gasCapex" value="800" step="1" />
+
             <label for="solarCapex">Solar Capex (GBP/kW):</label>
-            <input type="number" id="solarCapex" value="450" step="1"/>
+            <input type="number" id="solarCapex" value="450" step="1" />
+
             <label for="batteryCapex">Battery Capex (GBP/kWh):</label>
-            <input type="number" id="batteryCapex" value="200" step="1"/>
+            <input type="number" id="batteryCapex" value="200" step="1" />
           </fieldset>
 
           <fieldset>
             <legend>O&amp;M</legend>
             <label for="gasFixedOM">Gas Fixed O&amp;M (GBP/MW/yr):</label>
-            <input type="number" id="gasFixedOM" value="18000" step="100"/>
+            <input type="number" id="gasFixedOM" value="18000" step="100" />
+
             <label for="solarFixedOM">Solar Fixed O&amp;M (GBP/MW/yr):</label>
-            <input type="number" id="solarFixedOM" value="8000" step="100"/>
+            <input type="number" id="solarFixedOM" value="8000" step="100" />
+
             <label for="batteryFixedOM">Battery Fixed O&amp;M (GBP/MW/yr):</label>
-            <input type="number" id="batteryFixedOM" value="6000" step="100"/>
+            <input type="number" id="batteryFixedOM" value="6000" step="100" />
+
             <label for="gasVarOM">Gas Variable O&amp;M (GBP/MWh):</label>
-            <input type="number" id="gasVarOM" value="4" step="1"/>
-            <label for="gasFuel">Gas Fuel (GBP/MWh_fuel):</label>
-            <input type="number" id="gasFuel" value="40" step="1"/>
+            <input type="number" id="gasVarOM" value="4" step="1" />
+
+            <label for="gasFuel">Gas Fuel (GBP/MWh):</label>
+            <input type="number" id="gasFuel" value="40" step="1" />
           </fieldset>
 
           <fieldset>
             <legend>Other</legend>
             <label for="gasEfficiency">Gas Efficiency (%):</label>
-            <input type="number" id="gasEfficiency" value="45" step="1"/>
-            <label for="inverterRatio">Inverter Ratio:</label>
-            <input type="number" id="inverterRatio" value="1.2" step="0.1"/>
+            <input type="number" id="gasEfficiency" value="45" step="1" />
+
+            <label for="inverterRatio">Inverter Clipping Ratio:</label>
+            <input type="number" id="inverterRatio" value="1.2" step="0.1" />
+
             <label for="waccFossil">WACC Fossil (%):</label>
-            <input type="number" id="waccFossil" value="8" step="0.1"/>
-            <label for="waccRenew">WACC Renew (%):</label>
-            <input type="number" id="waccRenew" value="5" step="0.1"/>
-            <label for="lifetimeFossil">Lifetime (fossil) (yrs):</label>
-            <input type="number" id="lifetimeFossil" value="25" step="1"/>
-            <label for="lifetimeSolar">Lifetime (solar) (yrs):</label>
-            <input type="number" id="lifetimeSolar" value="35" step="1"/>
+            <input type="number" id="waccFossil" value="8" step="0.1" />
+
+            <label for="waccRenew">WACC Solar &amp; Battery (%):</label>
+            <input type="number" id="waccRenew" value="5" step="0.1" />
+
+            <label for="lifetimeFossil">Lifetime (fossil) (years):</label>
+            <input type="number" id="lifetimeFossil" value="25" step="1" />
+
+            <label for="lifetimeSolar">Lifetime (solar) (years):</label>
+            <input type="number" id="lifetimeSolar" value="35" step="1" />
           </fieldset>
+
+          <button type="button" onclick="runModel()">Run Model</button>
         </div>
       </div>
     </div>
 
+    <!-- CONTENT area with charts & summary in a grid -->
     <div id="content">
-      <button id="updateBtn" style="margin-bottom:1rem;">Update</button>
-
-      <div class="chart-box">
-        <h3>Generation Mix</h3>
-        <div class="chart-container">
+      <div id="chartSection">
+        <!-- Annual Mix -->
+        <div class="chart-box">
+          <h3>Annual Generation Mix</h3>
           <canvas id="annualMixChart"></canvas>
         </div>
-      </div>
 
-      <div class="chart-box">
-        <h3>LCOE Breakdown</h3>
-        <div class="chart-container">
-          <canvas id="lcoeChart"></canvas>
-        </div>
-      </div>
-
-      <div class="chart-box">
-        <h3>Yearly Profile</h3>
-        <div class="chart-container">
+        <!-- Yearly Profile -->
+        <div class="chart-box">
+          <h3>Yearly Profile</h3>
           <canvas id="yearlyProfileChart"></canvas>
         </div>
-      </div>
 
-      <div class="chart-box">
-        <h3>January (7 days)</h3>
-        <div class="chart-container">
+        <!-- January -->
+        <div class="chart-box">
+          <h3>Selected January Days</h3>
           <canvas id="janProfileChart"></canvas>
         </div>
-      </div>
 
-      <div class="chart-box">
-        <h3>July (7 days)</h3>
-        <div class="chart-container">
+        <!-- July -->
+        <div class="chart-box">
+          <h3>Selected July Days</h3>
           <canvas id="julProfileChart"></canvas>
+        </div>
+
+        <!-- LCOE Breakdown -->
+        <div class="chart-box">
+          <h3>Levelized Cost Breakdown</h3>
+          <canvas id="lcoeBreakdownChart"></canvas>
+        </div>
+
+        <!-- Summary -->
+        <div class="chart-box">
+          <h3>Summary</h3>
+          <div id="summary"></div>
         </div>
       </div>
     </div>
   </div>
 
+  <!-- FOOTER -->
   <footer>
     Created by <strong>Daan Walter</strong>, 2025
   </footer>
 
-  <script>
-    function toggleGroup(el){
-      const content = el.nextElementSibling;
-      if(content.style.display==="" || content.style.display==="none"){
-        content.style.display="block";
-        el.classList.remove("collapsed");
-        el.classList.add("expanded");
-      } else {
-        content.style.display="none";
-        el.classList.remove("expanded");
-        el.classList.add("collapsed");
-      }
-    }
-    document.addEventListener("DOMContentLoaded", ()=>{
-      document.querySelectorAll('.group-title').forEach(el=>{
-        el.classList.add("collapsed");
-        el.nextElementSibling.style.display="none";
-      });
-      tippy('[data-tippy-content]',{ animation:'scale', theme:'light-border' });
-    });
-  </script>
-
+  <!-- Our revised LCOE logic (model.js) -->
   <script src="model.js"></script>
 </body>
 </html>
