--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LCOE Calculator</title>
 
-  <!-- Link to the new, denser style.css -->
+  <!-- Link to external CSS -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Chart.js, PapaParse, Tippy.js -->
+  <!-- Chart.js, PapaParse, Tippy.js (for tooltips if needed) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
@@ -57,9 +57,9 @@
     </p>
   </header>
 
-  <!-- MAIN WRAPPER -->
+  <!-- MAIN LAYOUT WRAPPER -->
   <div class="container sim-container">
-    <!-- SIDEBAR -->
+    <!-- SIDEBAR with input parameters -->
     <div id="sidebar">
       <h2>Model Parameters</h2>
 
