--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Chart.js, PapaParse, Tippy.js (if you want tooltips) -->
+  <!-- Chart.js, PapaParse, Tippy.js, plus Chart.js DataLabels for bar labels -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
@@ -19,6 +20,9 @@
     // Chart.js defaults
     Chart.defaults.font.family = 'Poppins, sans-serif';
     Chart.defaults.font.size = 15;
+
+    // Register the DataLabels plugin for Chart.js
+    Chart.register(ChartDataLabels);
 
     // Toggle group content display on click
     function toggleGroup(el) {
@@ -63,12 +67,18 @@
     <div id="sidebar">
       <h2>Model Parameters</h2>
 
+      <!-- Button to run the model (ABOVE system config) -->
+      <button type="button" id="runModelBtn" onclick="runModel()">Run Model</button>
+
       <!-- Group: System Configuration -->
       <div class="group">
         <h3 class="group-title" onclick="toggleGroup(this)">System Configuration</h3>
         <div class="group-content">
           <fieldset>
             <legend>Capacity</legend>
+            <!-- Gas capacity is fixed at 1 GW, no input field -->
+            <label for="gasCap">Gas Capacity (GW): 1 (fixed)</label>
+
             <label for="solarCap" data-tippy-content="Solar capacity in GW">Solar Capacity (GW):</label>
             <input type="number" id="solarCap" value="6" step="0.1" />
 
@@ -108,15 +118,17 @@
             <label for="gasVarOM">Gas Variable O&amp;M (GBP/MWh):</label>
             <input type="number" id="gasVarOM" value="4" step="1" />
 
+            <!-- Default gas price now 27 GBP/MWh -->
             <label for="gasFuel">Gas Fuel (GBP/MWh):</label>
-            <input type="number" id="gasFuel" value="40" step="1" />
+            <input type="number" id="gasFuel" value="27" step="1" />
+
+            <!-- Gas Efficiency under O&M -->
+            <label for="gasEfficiency">Gas Efficiency (%):</label>
+            <input type="number" id="gasEfficiency" value="45" step="1" />
           </fieldset>
 
           <fieldset>
             <legend>Other</legend>
-            <label for="gasEfficiency">Gas Efficiency (%):</label>
-            <input type="number" id="gasEfficiency" value="45" step="1" />
-
             <label for="inverterRatio">Inverter Clipping Ratio:</label>
             <input type="number" id="inverterRatio" value="1.2" step="0.1" />
 
@@ -134,9 +146,6 @@
           </fieldset>
         </div>
       </div>
-
-      <!-- Button to run the model -->
-      <button type="button" id="runModelBtn" onclick="runModel()">Run Model</button>
     </div>
 
     <!-- CONTENT area with charts in a grid -->
@@ -166,9 +175,9 @@
           <canvas id="julProfileChart"></canvas>
         </div>
 
-        <!-- Single Bar: System LCOE (stacked 6 segments) -->
+        <!-- Waterfall LCOE chart with 3 bars: Capex, Opex, Total -->
         <div class="chart-box">
-          <h3>Total LCOE Breakdown</h3>
+          <h3>Total LCOE (Waterfall)</h3>
           <canvas id="systemLcoeChart"></canvas>
         </div>
       </div>
