--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LCOE Calculator</title>
+  <title>Levelized System Cost Calculator</title>
 
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Chart.js, PapaParse, Tippy.js, plus Chart.js DataLabels for bar labels -->
+  <!-- Chart.js, PapaParse, Tippy.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
@@ -20,9 +19,6 @@
     // Chart.js defaults
     Chart.defaults.font.family = 'Poppins, sans-serif';
     Chart.defaults.font.size = 15;
-
-    // Register the DataLabels plugin for Chart.js
-    Chart.register(ChartDataLabels);
 
     // Toggle group content display on click
     function toggleGroup(el) {
@@ -55,9 +51,12 @@
 <body>
   <!-- HEADER -->
   <header class="container">
-    <h1>LCOE Calculator</h1>
+    <h1>Levelized System Cost Calculator</h1>
     <p class="disclaimer">
-      This is a high-level LCOE model for demonstration only. Numbers are approximate.
+      This is a tool to play around with different amounts of solar and batteries on top of a gas plant to supply 
+      1 GW baseload power all year round. The site is set in Southern England.
+      <br />
+      Note: All numbers are approximate and for demonstration only.
     </p>
   </header>
 
@@ -118,11 +117,9 @@
             <label for="gasVarOM">Gas Variable O&amp;M (GBP/MWh):</label>
             <input type="number" id="gasVarOM" value="4" step="1" />
 
-            <!-- Default gas price now 27 GBP/MWh -->
             <label for="gasFuel">Gas Fuel (GBP/MWh):</label>
             <input type="number" id="gasFuel" value="27" step="1" />
 
-            <!-- Gas Efficiency under O&M -->
             <label for="gasEfficiency">Gas Efficiency (%):</label>
             <input type="number" id="gasEfficiency" value="45" step="1" />
           </fieldset>
@@ -132,8 +129,9 @@
             <label for="inverterRatio">Inverter Clipping Ratio:</label>
             <input type="number" id="inverterRatio" value="1.2" step="0.1" />
 
+            <!-- Default Gas WACC is 7.5% now -->
             <label for="waccFossil">WACC Fossil (%):</label>
-            <input type="number" id="waccFossil" value="8" step="0.1" />
+            <input type="number" id="waccFossil" value="7.5" step="0.1" />
 
             <label for="waccRenew">WACC Solar &amp; Battery (%):</label>
             <input type="number" id="waccRenew" value="5" step="0.1" />
@@ -175,10 +173,11 @@
           <canvas id="julProfileChart"></canvas>
         </div>
 
-        <!-- Waterfall LCOE chart with 3 bars: Capex, Opex, Total -->
+        <!-- Horizontal bar chart: Capex, Opex, Total -->
         <div class="chart-box">
-          <h3>Total LCOE (Waterfall)</h3>
-          <canvas id="systemLcoeChart"></canvas>
+          <h3>Levelized System Cost (Waterfall)</h3>
+          <canvas id="systemCostChart"></canvas>
+          <div id="levelizedCostResult" style="margin-top:10px; font-weight:600;"></div>
         </div>
       </div>
     </div>
@@ -189,7 +188,7 @@
     Created by <strong>Daan Walter</strong>, 2025
   </footer>
 
-  <!-- Our revised LCOE logic (model.js) -->
+  <!-- Our revised code in model.js -->
   <script src="model.js"></script>
 </body>
 </html>
