--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Levelized System Cost Calculator</title>
 
-  <!-- Link to external CSS -->
+  <!-- Link to your existing CSS file -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Chart.js, PapaParse, Tippy.js -->
+  <!-- Chart.js + PapaParse + Tippy.js (for tooltips) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
@@ -53,8 +53,8 @@
   <header class="container">
     <h1>Levelized System Cost Calculator</h1>
     <p class="disclaimer">
-      This is a tool to play around with different amounts of solar and batteries on top of a gas plant to supply 
-      1 GW baseload power all year round. The site is set in Southern England.
+      This is a tool to play around with different amounts of solar and batteries on top of a gas plant 
+      to supply 1 GW baseload power all year round. The site is set in Southern England.
       <br />
       Note: All numbers are approximate and for demonstration only.
     </p>
