--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Link to your existing CSS file -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Chart.js + PapaParse + Tippy.js (for tooltips) -->
+  <!-- Chart.js + PapaParse + Tippy.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
@@ -76,7 +76,7 @@
           <fieldset>
             <legend>Capacity</legend>
             <!-- Gas capacity is fixed at 1 GW, no input field -->
-            <label for="gasCap">Gas Capacity (GW): 1 (fixed)</label>
+            <label>Gas Capacity (GW): 1 (fixed)</label>
 
             <label for="solarCap" data-tippy-content="Solar capacity in GW">Solar Capacity (GW):</label>
             <input type="number" id="solarCap" value="6" step="0.1" />
@@ -129,7 +129,6 @@
             <label for="inverterRatio">Inverter Clipping Ratio:</label>
             <input type="number" id="inverterRatio" value="1.2" step="0.1" />
 
-            <!-- Default Gas WACC is 7.5% now -->
             <label for="waccFossil">WACC Fossil (%):</label>
             <input type="number" id="waccFossil" value="7.5" step="0.1" />
 
