--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <canvas id="julProfileChart"></canvas>
         </div>
 
-        <!-- Horizontal bar chart: Capex, Opex, Total -->
+        <!-- Final stacked bar: Gas/Solar/Battery for [Capex, Opex, Total] -->
         <div class="chart-box">
           <h3>Levelized System Cost (Waterfall)</h3>
           <canvas id="systemCostChart"></canvas>
