--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
   <header class="container">
     <h1>Levelized System Cost Calculator</h1>
     <p class="disclaimer">
-      This is a tool to play around with different amounts of solar and batteries on top of a gas plant 
-      to supply 1 GW baseload power all year round. The site is set in Southern England.
+      This interactive tool lets you explore different combinations of solar and battery storage alongside a 1 GW gas plant to deliver year-round baseload power for the UK electricity market. It uses solar generation profiles from Southern England to reflect regional conditions.
       <br />
-      Note: All numbers are approximate and for demonstration only.
+      Note: All figures are approximate and intended for demonstration purposes only.
     </p>
   </header>
 
@@ -174,7 +173,7 @@
 
         <!-- Final stacked bar: Gas/Solar/Battery for [Capex, Opex, Total] -->
         <div class="chart-box">
-          <h3>Levelized System Cost (Waterfall)</h3>
+          <h3>Levelized System Cost</h3>
           <canvas id="systemCostChart"></canvas>
           <div id="levelizedCostResult" style="margin-top:10px; font-weight:600;"></div>
         </div>
