--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <!-- Final stacked bar: Gas/Solar/Battery for [Capex, Opex, Total] -->
         <div class="chart-box">
-          <h3>Levelized System Cost (Waterfall)</h3>
+          <h3>Levelized System Cost</h3>
           <canvas id="systemCostChart"></canvas>
           <div id="levelizedCostResult" style="margin-top:10px; font-weight:600;"></div>
         </div>
