--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <h1>Levelized System Cost Calculator</h1>
     <p class="disclaimer">
       This is a tool to play around with different amounts of solar and batteries on top of a gas plant 
-      to supply 1 GW baseload power all year round. The site is set in Southern England.
+      to supply 1 GW baseload power all year round. The site is set in Southern England. 
       <br />
-      Note: All numbers are approximate and for demonstration only.
+      Note: see default assumptions under the "Assumptions" tab. 
     </p>
   </header>
 
