--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
   <header class="container">
     <h1>Levelized System Cost Calculator</h1>
     <p class="disclaimer">
-      This is a tool to play around with different amounts of solar and batteries on top of a gas plant 
-      to supply 1 GW baseload power all year round. The site is set in Southern England. 
+      This tool explores a hypothetical scenario: supplying 1 GW of baseload power in the south of England using gas, solar, and battery storage. 
       <br />
       
     </p>
